multiudpsink: Allow setting "socket-v6" without setting "socket" too

https://bugzilla.gnome.org/show_bug.cgi?id=764897